Fixed overflow problems

--- a/components/Base/Base.module.scss
+++ b/components/Base/Base.module.scss
@@ -4,7 +4,6 @@
 .context {
     display: flex;
     flex-direction: column;
-    overflow-x: hidden;
 }
 
 .navbarWrapper {
