--- a/styles/Learn.module.scss
+++ b/styles/Learn.module.scss
@@ -2,12 +2,11 @@
 @import "colors";
 
 
-.content {
+.context {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 75px;
-    padding: 100px 20px 20px 20px;
 }
 
 .section {
